--- a/dashboard.html
+++ b/dashboard.html
@@ -94,31 +94,39 @@
   </section>
     </div>
   </main>
-<!-- Firebase -->
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-  import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-analytics.js";
+  import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, addDoc, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-firestore.js";
 
+  // Your web app's Firebase configuration
   const firebaseConfig = {
     apiKey: "AIzaSyDxC--WywLZ13NZdiouncGLb8SaE-3GggQ",
     authDomain: "site-perso-b7c08.firebaseapp.com",
+    databaseURL: "https://site-perso-b7c08-default-rtdb.firebaseio.com",
     projectId: "site-perso-b7c08",
-    storageBucket: "site-perso-b7c08.appspot.com",
+    storageBucket: "site-perso-b7c08.firebasestorage.app",
     messagingSenderId: "1015317206704",
-    appId: "1:1015317206704:web:19e1d3762bda8a7cf78d75"
+    appId: "1:1015317206704:web:19e1d3762bda8a7cf78d75",
+    measurementId: "G-MMLMV2DPNT"
   };
 
+  // Initialize Firebase
   const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
   const db = getFirestore(app);
-
+  
+  // Rendre db accessible globalement
   window.db = db;
-  window.fs = { collection, getDocs };
+  
+  console.log("✅ Firebase initialisé avec Firestore");
 </script>
-
 <!-- TON SCRIPT -->
 <script src="script.js"></script>
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
