--- a/notes.html
+++ b/notes.html
@@ -5,21 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notes & Agenda</title>
   <link rel="stylesheet" href="style.css">
-</head>
-<body class="notes">
-  <header>
-    <h1>📝 Notes & Agenda</h1>
-    <nav>
-      <button onclick="location.href='dashboard.html'">📊 Dashboard</button>
-      <button onclick="location.href='vie-perso.html'">📅 Vie Perso</button>
-      <button onclick="location.href='finance.html'">💰 Finance</button>
-      <button onclick="location.href='objectifs.html'">🎯 Objectifs</button>
-      <button onclick="location.href='projets.html'">🚀 Projets</button>
-      <button onclick="location.href='nutrition.html'">🍽️ Nutrition</button>
-      <button onclick="location.href='notes.html'" class="active">📝 Notes</button>
-    </nav>
-    <button onclick="logout()" class="logout">🚪 Déconnexion</button>
-
+  <!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     <!-- Firebase -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
@@ -44,8 +32,25 @@
   window.db = db;
 </script>
 
+
 <!-- Firebase Helpers -->
 <script src="firebase-helpers.js"></script>
+
+</head>
+<body class="notes">
+  <header>
+    <h1>📝 Notes & Agenda</h1>
+    <nav>
+      <button onclick="location.href='dashboard.html'">📊 Dashboard</button>
+      <button onclick="location.href='vie-perso.html'">📅 Vie Perso</button>
+      <button onclick="location.href='finance.html'">💰 Finance</button>
+      <button onclick="location.href='objectifs.html'">🎯 Objectifs</button>
+      <button onclick="location.href='projets.html'">🚀 Projets</button>
+      <button onclick="location.href='nutrition.html'">🍽️ Nutrition</button>
+      <button onclick="location.href='notes.html'" class="active">📝 Notes</button>
+    </nav>
+    <button onclick="logout()" class="logout">🚪 Déconnexion</button>
+
   </header>
 
   <main>
@@ -393,3 +398,4 @@ document.addEventListener('DOMContentLoaded', function() {
 </body>
 
 </html>
+
