--- a/vie-perso.html
+++ b/vie-perso.html
@@ -5,21 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vie Perso</title>
   <link rel="stylesheet" href="style.css">
-</head>
-<body class="vie-perso">
-  <header>
-    <h1>📅 Vie Perso</h1>
-    <nav>
-      <button onclick="location.href='dashboard.html'" >📊 Dashboard</button>
-      <button onclick="location.href='vie-perso.html'" class="active">📅 Vie Perso</button>
-      <button onclick="location.href='finance.html'" >💰 Finance</button>
-      <button onclick="location.href='objectifs.html'">🎯 Objectifs</button>
-      <button onclick="location.href='projets.html'">🚀 Projets</button>
-      <button onclick="location.href='nutrition.html'">🍽️ Nutrition</button>
-      <button onclick="location.href='notes.html'">📝 Notes</button>
-    </nav>
-    <button onclick="logout()" class="logout">Déconnexion</button>
 
+    <!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     <!-- Firebase -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
@@ -44,8 +33,23 @@
   window.db = db;
 </script>
 
+
 <!-- Firebase Helpers -->
 <script src="firebase-helpers.js"></script>
+</head>
+<body class="vie-perso">
+  <header>
+    <h1>📅 Vie Perso</h1>
+    <nav>
+      <button onclick="location.href='dashboard.html'" >📊 Dashboard</button>
+      <button onclick="location.href='vie-perso.html'" class="active">📅 Vie Perso</button>
+      <button onclick="location.href='finance.html'" >💰 Finance</button>
+      <button onclick="location.href='objectifs.html'">🎯 Objectifs</button>
+      <button onclick="location.href='projets.html'">🚀 Projets</button>
+      <button onclick="location.href='nutrition.html'">🍽️ Nutrition</button>
+      <button onclick="location.href='notes.html'">📝 Notes</button>
+    </nav>
+    <button onclick="logout()" class="logout">Déconnexion</button>
     
   </header>
 
@@ -170,3 +174,4 @@
   });
 
   </script>
+
