--- a/dashboard.html
+++ b/dashboard.html
@@ -5,9 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tableau de Bord</title>
   <link rel="stylesheet" href="style.css">
+  
   <!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  
+  <script>
+    // Configuration Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyDxC--WywLZ13NZdiouncGLb8SaE-3GggQ",
+      authDomain: "site-perso-b7c08.firebaseapp.com",
+      projectId: "site-perso-b7c08",
+      storageBucket: "site-perso-b7c08.firebasestorage.app",
+      messagingSenderId: "1015317206704",
+      appId: "1:1015317206704:web:19e1d3762bda8a7cf78d75",
+      measurementId: "G-MMLMV2DPNT"
+    };
+    
+    // Initialiser Firebase
+    if (!firebase.apps.length) {
+      firebase.initializeApp(firebaseConfig);
+      console.log("✅ Firebase initialisé sur le dashboard");
+    }
+  </script>
 </head>
 <body class="dashboard">
   <header>
@@ -97,39 +117,11 @@
   </section>
     </div>
   </main>
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-analytics.js";
-  import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, addDoc, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-firestore.js";
-
-  // Your web app's Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyDxC--WywLZ13NZdiouncGLb8SaE-3GggQ",
-    authDomain: "site-perso-b7c08.firebaseapp.com",
-    databaseURL: "https://site-perso-b7c08-default-rtdb.firebaseio.com",
-    projectId: "site-perso-b7c08",
-    storageBucket: "site-perso-b7c08.firebasestorage.app",
-    messagingSenderId: "1015317206704",
-    appId: "1:1015317206704:web:19e1d3762bda8a7cf78d75",
-    measurementId: "G-MMLMV2DPNT"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-  const db = getFirestore(app);
-  
-  // Rendre db accessible globalement
-  window.db = db;
-  
-  console.log("✅ Firebase initialisé avec Firestore");
-</script>
-
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
